Wed Mar 11 21:45:36 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: use T_IMEMO to create THROW_DATA.

	  Add THROW_DATA_NEW().

	* internal.h: move defnition of `struct THROW_DATA'
	  from vm_insnhelper.h to internal.h.

	  Rename `THROW_DATA' to `vm_throw_data'.

	* eval_intern.h (THROW_DATA_P): move to internal.h.
	  THROW_DATA is no longer T_NODE, so check T_IMEMO.

	* gc.c (gc_mark_children): mark THROW_DATA.

	* vm.c: catch up these changes.

	* vm_eval.c: ditto.

	* vm_insnhelper.c: ditto.

Wed Mar 11 21:21:56 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: use T_IMEMO to create SVAR.

	* internal.h, vm_insnhelper.h: move definition `struct SVAR'
	  from vm_insnhelper.h to internal.h. And rename it to strcut vm_svar.

	  new imemo_type imemo_svar is added.

	* gc.c (gc_mark_children): mark imemo_svar.

	* node.c (rb_gc_mark_node): remove useless marking.

Wed Mar 11 19:35:46 2015  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: introduce new type T_IMEMO.
	  T_IMEMO is Internal Memo type, internal use only.
	  T_IMEMO has same purpose of NODE_MEMO.

	  To insert T_IMEMO, type numbers are modified a little.

	* internal.h: define struct RIMemo. Each RIMemo objects
	  has imemo_type. We can observe it by the imemo_type() function.

	* gc.c (rb_imemo_new): added.

	* node.h: remove NODE_CREF and NEW_CREF().

	* node.c (rb_gc_mark_node): ditto.

	* vm.c (vm_cref_new): use rb_imem_new().

	* vm_eval.c: ditto.

	* vm_insnhelper.c: use RIMemo objects for CREF.

	* ext/objspace/objspace.c: support T_IMEMO.

Wed Mar 11 17:03:20 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix memory leak by prepend method.

	  It is easy to reproduce with such script:

	    module M; def bar; end; end
	    loop{
	      Class.new do
	        def foo; end
	        prepend M
	      end
	    }

	* gc.c (obj_free): free T_ICLASS::m_tbl if it is created by prepend.
	  To recognize it, check RICLASS_IS_ORIGIN flag.
