@@ -1,3 +1,9 @@
+Wed Mar 11 21:53:43 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* internal.h, eval_intern.h: move CREF accessors.
+
+	  List IMEMO supported types in internal.h.
+
 Wed Mar 11 21:45:36 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_insnhelper.h: use T_IMEMO to create THROW_DATA.
